2000-12-07  Radek Doulik  <rodo@helixcode.com>

	* htmltable.c: fix HTML_CHANGE_PREF_WIDTH brokeness
	count padding to cell width

	* htmlgdkpainter.c: removed obsolete code

2000-12-06  Larry Ewing  <lewing@helixcode.com>

	* htmlengine.c (parse_object_params): use
	html_tokenizer_peek_token check for pending <param> tags
	nondestructively.
	(parse_object): clean up the calls to parse_body, and discard_body
	now that we have no longer already popped the token off the stack.

	* htmltokenizer.h: add prototype for html_tokenizer_peek_token.

	* htmltokenizer.c (html_tokenizer_peek_token): add a new function
	to peek at the next token nondestructively.

	* htmlengine.c (parse_object): make sure we actually match the end
	tag properly.

2000-12-06  Radek Doulik  <rodo@helixcode.com>

	* htmlobject.c (html_object_calc_preferred_width): cache
	pref_width

	* htmlobject.h: added pref_width

	* htmlembedded.c (allocate): set HTML_CHANGE_ALL

	* htmltext.c (split): set HTML_CHANGE_ALL

	* htmlimage.c (html_image_factory_area_prepared): set HTML_CHANGE_ALL

	* htmlinterval.c (select_object): use top engine for select_in and
	"right one" for select_range call

2000-12-06  Larry Ewing  <lewing@helixcode.com>

	* htmlengine.c (parse_object): change ret_val to object_found to
	make the meaning clear. Let me make this clear if you return TRUE
	in your object_requested signal we will use the embedded element,
	if you return false we will parse and use the contents between
	<object> and </object>.  Also free type and classid.

	* gtkhtml.c (html_engine_object_requested_cb): change ret_val to
	object_found to make the meaning clear.

2000-12-06  Radek Doulik  <rodo@helixcode.com>

	* htmltable.c (calc_column_width_step): take care of cspan
	(calc_column_width_template): do steps for all possible cspans

	* htmlengine.c (parse_i): set eat_space to FALSE after <img>

	* htmltable.c (divide_into_percented): don't substract max_size
	[c] from MIN, but from total_width part