@@ -1,5 +1,9 @@
 2000-12-07  Radek Doulik  <rodo@helixcode.com>
 
+	* htmlgdkpainter.c (draw_panel): changed border drawing
+	(find_font): if found bigger and smaller font than requsted,
+	choose according to size known from font style
+
 	* htmltable.c: fix HTML_CHANGE_PREF_WIDTH brokeness
 	count padding to cell width
 
